<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/sc_number"
            android:onClick="scIntentMoving"
            android:text="@string/sc_number"
            android:textSize="25sp"
            android:textColor="@color/colorBackground"
            android:textAllCaps="false"
            android:background="@drawable/my_button_bg"
            android:layout_width="135dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/sc_punc"
            android:onClick="scIntentMoving"
            android:text="@string/sc_punc"
            android:textSize="22sp"
            android:textColor="@color/colorBackground"
            android:textAllCaps="false"
            android:background="@drawable/my_button_bg"
            android:layout_marginLeft="10dp"
            android:layout_width="135dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/sc_sign"
            android:onClick="scIntentMoving"
            android:text="@string/sc_sign"
            android:textSize="22sp"
            android:textColor="@color/colorBackground"
            android:textAllCaps="false"
            android:background="@drawable/my_button_bg"
            android:layout_width="135dp"
            android:layout_height="match_parent" />
        <Button
            android:focusable="false"
            android:clickable="false"
            android:background="@android:color/transparent"
            android:layout_marginLeft="10dp"
            android:layout_width="135dp"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>