<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/braille_leraning"
    android:background="#ffffffff"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/braille_gird"
        android:layout_weight="7.5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/br1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@drawable/br1_checked"
                android:contentDescription="dot 1" />

            <CheckBox
                android:id="@+id/br2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@drawable/br2_checked"
                android:contentDescription="dot 2" />

            <CheckBox
                android:id="@+id/br3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@drawable/br3_checked"
                android:contentDescription="dot 3" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/br4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@drawable/br4_checked"
                android:contentDescription="dot 4" />

            <CheckBox
                android:id="@+id/br5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@drawable/br5_checked"
                android:contentDescription="dot 5" />

            <CheckBox
                android:id="@+id/br6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:button="@drawable/br6_checked"
                android:contentDescription="dot 6" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="0dp">

        <ImageButton
            android:id="@+id/send_image"
            android:focusable="false"
            android:clickable="false"
            android:src="@drawable/send"
            android:scaleType="centerInside"
            android:background="#ffffffff"
            android:layout_width="80dp"
            android:layout_height="40dp" />
        <Button
            android:id="@+id/send"
            android:text="Send"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="false"
            android:background="#ffffffff"
            android:layout_width="200dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <Button
            android:id="@+id/previous"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@drawable/radius_button_bg"
            android:contentDescription="@string/previous_descr"
            android:text="@string/previous"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/next"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/radius_button_bg"
            android:contentDescription="@string/next_descr"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
